# mlops_ml_ai

./: .gitignore  docker-compose.yml  index.ipynb  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
apps/api/: Dockerfile  main.py
apps/api/auth/: dependencies.py  routes.py  security.py
apps/api/core/: settings.py
apps/api/db/: models.py  session.py
apps/api/llm/: routes.py
apps/api/ml/: recommender.py
apps/api/monitoring/: baseline.py  confidence.py  current.py  drift_utils.py  performance_queries.py  performance_routes.py  performance_service.py  routes.py  service.py
apps/api/quiz/: questions.py  routes.py
apps/ui/: Dockerfile  app.py
artifacts/: model.joblib  scaler.pkl
data/: feedback_rows.csv  synth_meals.csv
docker/mlflow/: Dockerfile
k8s/: api.yaml  minio-lb.yaml  minio.yaml  mlflow-lb.yaml  mlflow.yaml  postgres.yaml  train-job.yaml  ui.yaml
mlops/: Dockerfile  export_feedback.py  generate_dataset.py  train_classifier.py  train_recommender.py  train_with_flywheel.py
