[project]
name = "what-to-eat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "argon2-cffi>=25.1.0",
    "boto3>=1.42.43",
    "fastapi>=0.128.2",
    "mlflow>=3.9.0",
    "openai>=2.17.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.40.0",
]
